LPS-166110 portal-language - Autogenerated - buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=استبدال الإدخالات الموجود
 overwrite-existing-page-templates=الكتابة فوق قوالب الصفحات الموجودة
 overwrite-existing-style-books=كتابة فوق سجل الأنماط الموجود
 overwrite-existing-utility-pages=كتابة فوق صفحات الأدوات المساعدة الموجودة
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=استبدل المرفق الموجود بالذي تمت إزالته.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=استبدل الإدخال الموجود بآخر من "سلة المحذوفات".
 owned=مملوك
@@ -18084,6 +18085,7 @@ update-booked-quantity=تحديث الكمية المحجوزة
 update-cart=تحديــث سلة التسوق
 update-categories=تحديــث التصنيف
 update-category=تحديــث التصنيف
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=تحديث حجم العمود
 update-comments=تحديث التعليقات
 update-consumer=إطلاع المستهلك
@@ -18125,6 +18127,7 @@ update-references=تحديث المراجع
 update-search-index=تحديــث دليل البحث
 update-service-description=تحديث وصف الخدمة
 update-site-pages-variation=إضافة صفحة الاختلاف
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=تحديث تاريخ استحقاق المهمة
 update-tasks-due-dates=تحديث تواريخ استحقاق المهام
 update-the-references-of-the-other-redirects-to-avoid-this-chain=تحديث المراجع لعمليات إعادة التوجيه الأخرى لتجنب هذه السلسلة.
