--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=Sobreescriu entrades existents
 overwrite-existing-page-templates=Sobreescriu les plantilles de pàgina existents
 overwrite-existing-style-books=Sobreescriu els llibres d'estils existents
 overwrite-existing-utility-pages=Sobreescriu les pàgines d'utilitat existents
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Sobreescrigueu el fitxer adjunt existent amb el que s'ha suprimit.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Sobreescrigueu l'entrada existent amb la de la paperera.
 owned=Propietat de
@@ -18086,6 +18087,7 @@ update-booked-quantity=Actualitza la quantitat reservada
 update-cart=Actualitza el carretó
 update-categories=Actualitza les categories
 update-category=Actualitza la categoria
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Actualitza la mida de la columna
 update-comments=Actualitza els comentaris
 update-consumer=Actualitza el consumidor
@@ -18127,6 +18129,7 @@ update-references=Actualitza les referències
 update-search-index=Actualitza l'índex de cerca
 update-service-description=Actualitza la descripció del servei
 update-site-pages-variation=Actualitza la variació de pàgines del lloc web
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Actualitza la data de venciment de la tasca
 update-tasks-due-dates=Actualitza les dates de venciment de les tasques
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Actualitza les referències dels altres redireccionaments per evitar aquesta cadena.
