--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Overwrite Existing Entries (Automatic Copy)
 overwrite-existing-page-templates=Overwrite Existing Page Templates (Automatic Copy)
 overwrite-existing-style-books=Overwrite Existing Style Books (Automatic Copy)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Přepsat existující přílohu odstraněnou přílohou.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Přepsat existující položku položkou z Koše.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Update Booked Quantity (Automatic Copy)
 update-cart=Upravit nákupní košík
 update-categories=Upravit kategorie
 update-category=Upravit kategorii
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Update Column Size (Automatic Copy)
 update-comments=Upravit komentáře
 update-consumer=Upravit zákazníka
@@ -18125,6 +18127,7 @@ update-references=Update References (Automatic Copy)
 update-search-index=Upravit vyhledávací index
 update-service-description=Upravit popis služby
 update-site-pages-variation=Aktualizovat varianty privátních stránek
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Update Task Due Date (Automatic Copy)
 update-tasks-due-dates=Update Tasks Due Dates (Automatic Copy)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain. (Automatic Copy)
