--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Overskriv eksisterende poster (Automatic Translation)
 overwrite-existing-page-templates=Overskriv eksisterende sideskabeloner (Automatic Translation)
 overwrite-existing-style-books=Overskriv eksisterende typografibøger (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Overwrite the existing attachment with the removed one. (Automatic Copy)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Overwrite the existing entry with the one from the Recycle Bin. (Automatic Copy)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Opdater reserveret antal (Automatic Translation)
 update-cart=Opdater kurv
 update-categories=Opdater kategorier
 update-category=Opdater kategori
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Opdater kolonnestørrelse (Automatic Translation)
 update-comments=Opdater kommentarer
 update-consumer=Opdater forbruger
@@ -18125,6 +18127,7 @@ update-references=Opdater referencer (Automatic Translation)
 update-search-index=Opdater søgeindeks
 update-service-description=Opdater servicebeskrivelse
 update-site-pages-variation=Opdater websider Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Opdater forfaldsdato for opgave (Automatic Translation)
 update-tasks-due-dates=Opdater forfaldsdatoer for opgaver (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Opdater referencerne for de andre omdirigeringer for at undgå denne kæde. (Automatic Translation)
