--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=Vorhandene Einträge überschreiben
 overwrite-existing-page-templates=Vorhandene Seitenvorlagen überschreiben
 overwrite-existing-style-books=Vorhandene Style Books überschreiben
 overwrite-existing-utility-pages=Vorhandene Utility-Seiten überschreiben
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Aktuellen Anhang durch den aus dem Papierkorb ersetzen.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Aktuellen Eintrag durch die aus dem Papierkorb ersetzen.
 owned=In Besitz
@@ -18086,6 +18087,7 @@ update-booked-quantity=Gebuchte Menge aktualisieren
 update-cart=Einkaufswagen aktualisieren
 update-categories=Kategorien aktualisieren
 update-category=Kategorie aktualisieren
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Spaltengröße aktualisieren
 update-comments=Kommentare aktualisieren
 update-consumer=Consumer aktualisieren
@@ -18127,6 +18129,7 @@ update-references=Referenzen aktualisieren
 update-search-index=Suchindex aktualisieren
 update-service-description=Service-Beschreibung aktualisieren
 update-site-pages-variation=Sitespezifische Seitenvariation aktualisieren
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Fälligkeitsdatum der Aufgabe aktualisieren
 update-tasks-due-dates=Fälligkeitsdaten der Aufgaben aktualisieren
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Aktualisieren sie die Referenzen der anderen Weiterleitungen, um diese Kette zu vermeiden.
