--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Kirjuta olemasolevad kirjed üle (Automatic Translati
 overwrite-existing-page-templates=Kirjuta olemasolevad lehemallid üle (Automatic Translation)
 overwrite-existing-style-books=Kirjuta olemasolevad laadiraamatud üle (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Kirjutage olemasolev manus eemaldatud manusega üle. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Kirjutage olemasolev kanne prügikastist üle. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Uuenda broneeritud kogus (Automatic Translation)
 update-cart=Värskenda ostukorvi
 update-categories=Värskenda kategooriaid
 update-category=Värskenda kategooriat
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Veeru suuruse värskendamine (Automatic Translation)
 update-comments=Värskenda kommentaare
 update-consumer=Uuenda tarbijat (Automatic Translation)
@@ -18125,6 +18127,7 @@ update-references=Värskenda viiteid (Automatic Translation)
 update-search-index=Värskenda otsinguindeksit
 update-service-description=Värskenda teenuse kirjeldust
 update-site-pages-variation=Saidilehtede variatsiooni värskendamine (Automatic Translation)
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Tööülesande tähtaja värskendamine (Automatic Translation)
 update-tasks-due-dates=Tööülesannete tähtaja värskendamine (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Selle ahela vältimiseks värskendage teiste ümbersuunamiste viiteid. (Automatic Translation)
