--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Gainidatzi lehendik dauden sarrerak
 overwrite-existing-page-templates=Overwrite Existing Page Templates (Automatic Copy)
 overwrite-existing-style-books=Overwrite Existing Style Books (Automatic Copy)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Overwrite the existing attachment with the removed one. (Automatic Copy)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Gainidatzi existitzen den fitxategia Zakarrontzian dagoen batengatik.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Update Booked Quantity (Automatic Copy)
 update-cart=Eguneratu saskia
 update-categories=Eguneratu kategoriak
 update-category=Eguneratu kategoria
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Update Column Size (Automatic Copy)
 update-comments=Eguneraketaren iruzkinak
 update-consumer=Eguneratu kontsumitzailea
@@ -18125,6 +18127,7 @@ update-references=Update References (Automatic Copy)
 update-search-index=Eguneratu bilaketa indizea
 update-service-description=Eguneratu zerbitzu deskribapena
 update-site-pages-variation=Eguneratu Guneko Orrien Aldakuntza
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Update Task Due Date (Automatic Copy)
 update-tasks-due-dates=Update Tasks Due Dates (Automatic Copy)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain. (Automatic Copy)
