--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=بازنویسی مطالب موجود
 overwrite-existing-page-templates=بازنویسی قالب های صفحه موجود (Automatic Translation)
 overwrite-existing-style-books=بازنویسی کتاب های سبک موجود (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=نوشتن مجدد فایل ضمیمه موجود با فایل حذف شده
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=نوشتن مجدد پست موجود با استفاده از پستی که در سطل زباله است.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=به روز رسانی کمیت رزرو شده (Automati
 update-cart=به روزرسانی نمودار
 update-categories=به روزرسانی طبقه‌بندی
 update-category=به روزرسانی طبقه‌بندی
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=به روز رسانی اندازه ستون (Automatic Translation)
 update-comments=نظرات به روز شده
 update-consumer=به روزرسانی محصولات قابل فروش
@@ -18125,6 +18127,7 @@ update-references=منابع به روز رسانی (Automatic Translation)
 update-search-index=به روزرسانی نمایه جستجو
 update-service-description=به روزرسانی شرح خدمات
 update-site-pages-variation=به روزرسانی صفحات سایت
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=به روز رسانی وظیفه موعد مقرر (Automatic Translation)
 update-tasks-due-dates=به روز رسانی وظایف تاریخ مقرر (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=به روز رسانی منابع دیگر تغییر مسیر برای جلوگیری از این زنجیره. (Automatic Translation)
