--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11548,6 +11548,7 @@ overwrite-existing-entries=Korvaa Nykyiset Merkinnät
 overwrite-existing-page-templates=Kirjoita Olemassa Olevien Sivumallien Päälle
 overwrite-existing-style-books=Korvaa Nykyiset Tyylikirjat
 overwrite-existing-utility-pages=Korvaa nykyiset apusivut
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Ylikirjoita olemassa oleva liitetiedosto poistetulla liitetiedostolla.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Ylikirjoita olemassa oleva tiedosto, roskakorista löytyvällä tiedostolla.
 owned=Omistettu
@@ -18082,6 +18083,7 @@ update-booked-quantity=Päivitä Varattu Määrä
 update-cart=Päivitä ostoskori
 update-categories=Päivitä luokitukset
 update-category=Päivitä luokitus
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Päivitä Sarakkeen Koko
 update-comments=Päivitä kommentteja
 update-consumer=Päivitä kuluttaja
@@ -18123,6 +18125,7 @@ update-references=Päivitä Viittaukset
 update-search-index=Päivitä hakuindeksi
 update-service-description=Päivitä palvelukuvaus
 update-site-pages-variation=Päivitä sivuston sivujen muunnelmat
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Päivitä Tehtävän Määräpäivä
 update-tasks-due-dates=Päivitä Tehtävien Määräpäiviä
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Päivitä muiden uudelleenohjauksien viittaukset välttääksesi tämän ketjun.
