--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Écraser les entrées existantes
 overwrite-existing-page-templates=Écraser les modèles de page existants
 overwrite-existing-style-books=Écraser les livres de style existants
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Écraser la pièce jointe existante avec celle retirée.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Écraser l'entrée existante avec celle de la Corbeille.
 owned=Possédé
@@ -18084,6 +18085,7 @@ update-booked-quantity=Mettre à jour la quantité réservée
 update-cart=Mettre à jour le panier
 update-categories=Mettre à jour les catégories
 update-category=Mettre à jour la catégorie
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Actualiser la taille de la colonne
 update-comments=Mise à jour des commentaires
 update-consumer=Mise à jour du client
@@ -18125,6 +18127,7 @@ update-references=Mettre à jour les références
 update-search-index=Mettre à jour l'index de recherche
 update-service-description=Mettre à jour la description du service
 update-site-pages-variation=Mettre à jour les variantes des pages de site
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Mettre à jour de l'échéance de la tâche
 update-tasks-due-dates=Actualiser les échéances des tâches
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Mettre à jour les références des autres redirections pour éviter cette chaîne.
