--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11552,6 +11552,7 @@ overwrite-existing-entries=A meglévő bejegyzések felülírása
 overwrite-existing-page-templates=A meglévő oldalsablonok felülírása
 overwrite-existing-style-books=Meglévő stíluskönyvek felülírása
 overwrite-existing-utility-pages=Meglévő segédprogram-oldalak felülírása
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Felülírni a létező csatolmányt az eltávolítottal.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Írd felül a létező bejegyzést a Lomtárból származóval.
 owned=Tulajdon
@@ -18087,6 +18088,7 @@ update-booked-quantity=Előjegyzett mennyiség frissítése
 update-cart=Kosár frissítése
 update-categories=Kategóriák frissítése
 update-category=Kategória frissítése
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Oszlopméret frissítése
 update-comments=Hozzászólások frissítése
 update-consumer=Fogyasztó aktualizálása
@@ -18128,6 +18130,7 @@ update-references=Hivatkozások frissítése
 update-search-index=Keresőindex frissítése
 update-service-description=Szerviz leírás frissítése
 update-site-pages-variation=Webhely oldalváltozatainak frissítése
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Feladat határidejének módosítása
 update-tasks-due-dates=Feladatok esedékességi dátumainak frissítése
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Frissítse a többi átirányítás hivatkozását, hogy elkerülje ezt a láncot.
