--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Timpa Entri yang Ada (Automatic Translation)
 overwrite-existing-page-templates=Timpa Templat Halaman yang Sudah Ada (Automatic Translation)
 overwrite-existing-style-books=Timpa buku gaya yang ada (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Timpa lampiran yang ada dengan lampiran yang dihapus. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Menimpa file yang ada dengan salah satu dari Recycle Bin.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Perbarui Kuantitas yang Dipesan (Automatic Translation)
 update-cart=Memperbarui Keranjang
 update-categories=Memperbarui Kategori
 update-category=Memperbarui Kategori
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Perbarui Ukuran Kolom (Automatic Translation)
 update-comments=Memperbarui Komentar
 update-consumer=Update Konsumen
@@ -18125,6 +18127,7 @@ update-references=Perbarui Referensi (Automatic Translation)
 update-search-index=Update Pencarian Indeks
 update-service-description=Update Layanan Deskripsi
 update-site-pages-variation=Mengelola Variasi Halaman
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Perbarui Tanggal Jatuh Tempo Tugas (Automatic Translation)
 update-tasks-due-dates=Memperbarui Tanggal Jatuh Tempo Tugas (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Perbarui referensi pengalihan lainnya untuk menghindari rantai ini. (Automatic Translation)
