--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=שכתב רשומות קיימות
 overwrite-existing-page-templates=החלף תבניות דף קיימות (Automatic Translation)
 overwrite-existing-style-books=החלף ספרי סגנונות קיימים (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=דרוס את הקובץ המצורף בעזרת הקובץ שהוסר.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=דרוס את הרשומה הקיימת עם הרשומה האחרת מסל המחזור.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=עדכן כמות שהוזמנה (Automatic Translation)
 update-cart=עדכן עגלה
 update-categories=עדכן קטגוריות
 update-category=עדכן קטגוריה
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=עדכן גודל עמודה (Automatic Translation)
 update-comments=עדכן תגובות
 update-consumer=עדכן צרכן
@@ -18125,6 +18127,7 @@ update-references=עדכן הפניות (Automatic Translation)
 update-search-index=עדכן אינקס חיפוש
 update-service-description=עדכן תיאור שירות
 update-site-pages-variation=עדכן וריאציית דפי אתר
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=עדכן תאריך יעד של פעילות (Automatic Translation)
 update-tasks-due-dates=עדכן תאריכי יעד של פעילויות (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=עדכן את ההפניות של הפניות אחרות כדי להימנע משרשרת זו. (Automatic Translation)
