--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=既存のエントリーを上書き
 overwrite-existing-page-templates=既存のページテンプレートを上書き
 overwrite-existing-style-books=既存のスタイルブックを上書き
 overwrite-existing-utility-pages=既存のユーティリティページを上書き
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=削除された添付データで、既存の添付データを上書きする
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=既存のファイルをゴミ箱からのファイルで上書きする
 owned=所有
@@ -18086,6 +18087,7 @@ update-booked-quantity=予約数量を更新
 update-cart=カートを更新する
 update-categories=カテゴリの更新
 update-category=カテゴリの更新
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=列幅を更新
 update-comments=コメントの更新
 update-consumer=コンシューマーの更新
@@ -18127,6 +18129,7 @@ update-references=参照を更新
 update-search-index=検索インデックスの更新
 update-service-description=サービス記述を更新する
 update-site-pages-variation=サイトページバリエーションを更新する
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=タスク期限の更新
 update-tasks-due-dates=タスク期限の更新
 update-the-references-of-the-other-redirects-to-avoid-this-chain=このチェーンを回避するため、他のリダイレクトの参照を更新してください。
