--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=기존 항목 덮어쓰기
 overwrite-existing-page-templates=기존 페이지 템플릿 덮어쓰기
 overwrite-existing-style-books=기존 스타일 북 덮어쓰기
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=기존 첨부 파일을 제거된 첨부 파일로 덮어씁니다.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=기존 항목을 휴지통의 항목으로 덮어씁니다.
 owned=소유
@@ -18083,6 +18084,7 @@ update-booked-quantity=예약 수량 업데이트
 update-cart=갱신 손수레
 update-categories=갱신 종류
 update-category=갱신 종류
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=열 크기 업데이트
 update-comments=갱신은 논평한다
 update-consumer=갱신 소비자
@@ -18124,6 +18126,7 @@ update-references=참조 업데이트
 update-search-index=갱신 수색 색인
 update-service-description=갱신 서비스 묘사
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=작업 마감일 업데이트
 update-tasks-due-dates=작업 기한 업데이트
 update-the-references-of-the-other-redirects-to-avoid-this-chain=이 체인을 피하기 위해 다른 리디렉션의 참조를 업데이트합니다.
