--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Perrašyti esamus įrašus (Automatic Translation)
 overwrite-existing-page-templates=Perrašyti esamus puslapių šablonus (Automatic Translation)
 overwrite-existing-style-books=Perrašyti esamas stilių knygas (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Perrašyti esamą priedą pašalintu. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Perrašyti esamą įrašą su įrašu iš šiukšlinės. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Atnaujinti rezervuotą kiekį (Automatic Translation)
 update-cart=Atnaujinti krepšelį (Automatic Translation)
 update-categories=Naujinti kategorijas (Automatic Translation)
 update-category=Naujinti kategoriją (Automatic Translation)
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Naujinti stulpelio dydį (Automatic Translation)
 update-comments=Naujinti komentarus (Automatic Translation)
 update-consumer=Atnaujinti vartotoją (Automatic Translation)
@@ -18125,6 +18127,7 @@ update-references=Naujinti nuorodas (Automatic Translation)
 update-search-index=Naujinti ieškos indeksą (Automatic Translation)
 update-service-description=Naujinti tarnybos aprašą (Automatic Translation)
 update-site-pages-variation=Naujinti svetainės puslapių variaciją (Automatic Translation)
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Naujinti užduoties terminą (Automatic Translation)
 update-tasks-due-dates=Naujinti užduočių terminus (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Atnaujinkite kitų peradresavimų nuorodas, kad išvengtumėte šios grandinės. (Automatic Translation)
