--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Tulis Ganti Penyertaan Sedia Ada (Automatic Translati
 overwrite-existing-page-templates=Tulis ganti Templat Halaman Sedia Ada (Automatic Translation)
 overwrite-existing-style-books=Tulis ganti Buku Gaya Sedia Ada (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Tulis ganti lampiran sedia ada dengan yang dikeluarkan. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Tulis ganti entri sedia ada dengan yang dari Tong Kitar Semula. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Kemaskini Kuantiti Yang Ditempah (Automatic Translation)
 update-cart=Kemaskini Troli (Automatic Translation)
 update-categories=Kemaskini Kategori (Automatic Translation)
 update-category=Kategori Pengemaskinian (Automatic Translation)
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Kemaskini Saiz Lajur (Automatic Translation)
 update-comments=Kemaskini Komen (Automatic Translation)
 update-consumer=Kemaskini Pengguna (Automatic Translation)
@@ -18125,6 +18127,7 @@ update-references=Kemaskini Rujukan (Automatic Translation)
 update-search-index=Kemaskini Indeks Gelintar (Automatic Translation)
 update-service-description=Kemaskini Perihalan Perkhidmatan (Automatic Translation)
 update-site-pages-variation=Kemaskini Perubahan Halaman Tapak (Automatic Translation)
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Kemaskini Tarikh Habis Tempoh Tugas (Automatic Translation)
 update-tasks-due-dates=Kemas kini Tarikh Akhir Tugasan (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Kemas kini rujukan penglencongan lain untuk mengelakkan rantaian ini. (Automatic Translation)
