--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Overskriv eksisterende innlegg
 overwrite-existing-page-templates=Overskriv eksisterende sidemaler (Automatic Translation)
 overwrite-existing-style-books=Overskrive eksisterende stilbøker (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Overskriv det eksisterende vedlegget med det fjernede vedlegget.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Overskriv det eksisterende innlegget med innlegget i papirkurven.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Oppdater bestilt antall (Automatic Translation)
 update-cart=Oppdater handlevogn
 update-categories=Oppdater kategorier
 update-category=Oppdater kategori
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Oppdater kolonnestørrelse (Automatic Translation)
 update-comments=Oppdater kommentarer
 update-consumer=Oppdateringskonsument
@@ -18125,6 +18127,7 @@ update-references=Oppdater referanser (Automatic Translation)
 update-search-index=Oppdatere søkeregisteret
 update-service-description=Oppdater tjenestebeskrivelse
 update-site-pages-variation=Oppdater nettstedssidevarianter
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Oppdater forfallsdato for oppgave (Automatic Translation)
 update-tasks-due-dates=Oppdater forfallsdatoer for oppgaver (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Oppdater referansene til de andre omadresseringene for å unngå denne kjeden. (Automatic Translation)
