--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11552,6 +11552,7 @@ overwrite-existing-entries=Bestaande invoer overschrijven
 overwrite-existing-page-templates=Bestaande paginasjablonen overschrijven
 overwrite-existing-style-books=Bestaande stijlboeken overschrijven
 overwrite-existing-utility-pages=Bestaande functiepagina's overschrijven
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=De bestaande bijlage overschrijven met de verwijderde bijlage.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=De bestaande invoer overschrijven met de invoer uit de prullenbak.
 owned=In eigendom
@@ -18087,6 +18088,7 @@ update-booked-quantity=Gereserveerde hoeveelheid bijwerken
 update-cart=Winkelwagen bijwerken
 update-categories=Categorieën bijwerken
 update-category=Categorie bijwerken
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Kolomgrootte bijwerken
 update-comments=Reacties bijwerken
 update-consumer=Consumer bijwerken
@@ -18128,6 +18130,7 @@ update-references=Referenties bijwerken
 update-search-index=Zoekindex bijwerken
 update-service-description=Servicebeschrijving bijwerken
 update-site-pages-variation=Sitepaginavariant bijwerken
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Vervaldatum taak bijwerken
 update-tasks-due-dates=Vervaldatums taken bijwerken
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Werk de referenties van de andere omleidingen bij om deze keten te vermijden.
