--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -11552,6 +11552,7 @@ overwrite-existing-entries=Overwrite Existing Entries (Automatic Copy)
 overwrite-existing-page-templates=Overwrite Existing Page Templates (Automatic Copy)
 overwrite-existing-style-books=Overwrite Existing Style Books (Automatic Copy)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=De bestaande bijlage overschrijven met de verwijderde bijlage.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=De bestaande invoer overschrijven met de invoer uit de prullenbak.
 owned=Owned (Automatic Copy)
@@ -18087,6 +18088,7 @@ update-booked-quantity=Update Booked Quantity (Automatic Copy)
 update-cart=Winkelwagen bijwerken
 update-categories=Categorieën bijwerken
 update-category=Categorie bijwerken
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Update Column Size (Automatic Copy)
 update-comments=Opmerkingen bijwerken
 update-consumer=Consument bijwerken
@@ -18128,6 +18130,7 @@ update-references=Update References (Automatic Copy)
 update-search-index=Zoekindex bijwerken
 update-service-description=Service beschrijving bijwerken
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Update Task Due Date (Automatic Copy)
 update-tasks-due-dates=Update Tasks Due Dates (Automatic Copy)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain. (Automatic Copy)
