--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Zastępowanie istniejących wpisów (Automatic Transl
 overwrite-existing-page-templates=Zastępowanie istniejących szablonów stron (Automatic Translation)
 overwrite-existing-style-books=Zastępowanie istniejących książek stylowych (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Nadpisz istniejący załącznik wersją, która była usunięta.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Nadpisz istniejący element wersją z kosza.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Aktualizuj ilość zarezerwowaną (Automatic Translation)
 update-cart=Aktualizuj koszyk
 update-categories=Aktualizuj kategorie
 update-category=Aktualizuj kategorię
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Aktualizuj rozmiar kolumny (Automatic Translation)
 update-comments=Aktualizuj komentarze
 update-consumer=Aktualizuj klienta
@@ -18125,6 +18127,7 @@ update-references=Aktualizuj odwołania (Automatic Translation)
 update-search-index=Aktualizuj indeks wyszukiwania
 update-service-description=Aktualizuj opis usługi
 update-site-pages-variation=Aktualizuj wariant strony witryny
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Data ukończenia zadania aktualizacji (Automatic Translation)
 update-tasks-due-dates=Aktualizuj daty ukończenia zadań (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Zaktualizuj odwołania innych przekierowań, aby uniknąć tego łańcucha. (Automatic Translation)
