--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Substituir entradas existentes
 overwrite-existing-page-templates=Substituir modelos de página existente
 overwrite-existing-style-books=Substituir livros de estilo existentes
 overwrite-existing-utility-pages=Substituir páginas de utilidade existentes
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Substituir o anexo existente pelo anexo removido.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Sobrescrever o arquivo existente com o restaurado da Lixeira.
 owned=Possui
@@ -18084,6 +18085,7 @@ update-booked-quantity=Quantidade de reserva atualizada
 update-cart=Atualizar o Carrinho
 update-categories=Atualizar Categorias
 update-category=Atualizar categoria
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Atualizar tamanho de coluna
 update-comments=Atualizar comentários
 update-consumer=Atualizar consumidor
@@ -18125,6 +18127,7 @@ update-references=Atualizar referências
 update-search-index=Atualizar Índice de Busca
 update-service-description=Atualizar descrição do serviço
 update-site-pages-variation=Atualizar variação da página do site
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Atualizar Prazo da Tarefa
 update-tasks-due-dates=Atualizar Prazos de Tarefas
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Atualize as referências dos redirecionamentos para evitar esta cadeia.
