--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=Substitua as entradas existentes (Automatic Translati
 overwrite-existing-page-templates=Substitua os modelos de página existentes (Automatic Translation)
 overwrite-existing-style-books=Sobregravar livros de estilo existentes (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Sobrepor o anexo existente pelo anexo removido.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Sobrepor a entrada existente com a restaurada da Reciclagem.
 owned=Owned (Automatic Copy)
@@ -18086,6 +18087,7 @@ update-booked-quantity=Atualização da Quantidade Reservada (Automatic Translat
 update-cart=Atualizar o Carrinho
 update-categories=Atualizar Categorias
 update-category=Atualizar Categoria
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Atualizar o tamanho da coluna (Automatic Translation)
 update-comments=Atualizar Comentários
 update-consumer=Atualizar Consumidor
@@ -18127,6 +18129,7 @@ update-references=Atualizar referências (Automatic Translation)
 update-search-index=Atualizar Índice de Pesquisa
 update-service-description=Atualizar Descrição do Serviço
 update-site-pages-variation=Atualizar Variante das Páginas do Site
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Atualizar a data de vencimento da tarefa (Automatic Translation)
 update-tasks-due-dates=Atualizar datas de vencimento das tarefas (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Atualize as referências dos outros redirecionamentos para evitar essa cadeia. (Automatic Translation)
