--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Suprascriere intrări existente (Automatic Translatio
 overwrite-existing-page-templates=Suprascriere șabloane pagină existente (Automatic Translation)
 overwrite-existing-style-books=Suprascriere cărți de stiluri existente (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Suprascrieți atașarea existentă cu cea eliminată. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Suprascrieți intrarea existentă cu cea din Coșul de reciclare. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Actualizare cantitate rezervată (Automatic Translation)
 update-cart=Actualizeaza Diagrama
 update-categories=Actualizeaza Categorii
 update-category=Actualizeaza Categorie
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Actualizare dimensiune coloană (Automatic Translation)
 update-comments=Actualizeaza Comenatrii
 update-consumer=Actualizeaza Consumator
@@ -18125,6 +18127,7 @@ update-references=Actualizare referințe (Automatic Translation)
 update-search-index=Actualizeaza Index Cautare
 update-service-description=Descriere Servicii Actualizare
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Actualizare dată scadență activitate (Automatic Translation)
 update-tasks-due-dates=Actualizare date scadente activități (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Actualizați referințele celorlalte redirecționări pentru a evita acest lanț. (Automatic Translation)
