--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Prepísať existujúce položky (Automatic Translatio
 overwrite-existing-page-templates=Prepísať existujúce šablóny strán (Automatic Translation)
 overwrite-existing-style-books=Prepísať existujúce knihy štýlov (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Prepísať existujúcu prílohu odstránenou.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Prepísať existujúci záznam hodnotou z odpadkového koša.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Aktualizovať rezervované množstvo (Automatic Translati
 update-cart=Aktualizovať košík
 update-categories=Aktualizovať kategórie
 update-category=Aktualizovať kategóriu
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Aktualizovať veľkosť stĺpca (Automatic Translation)
 update-comments=Aktualizovať komentáre
 update-consumer=Aktualizovať zákazníka
@@ -18125,6 +18127,7 @@ update-references=Aktualizovať odkazy (Automatic Translation)
 update-search-index=Aktualizovať index vyhľadávania
 update-service-description=Aktualizovať popis služby
 update-site-pages-variation=Aktualizovať variant stránok sídla
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Aktualizovať dátum úschovy úlohy (Automatic Translation)
 update-tasks-due-dates=Aktualizácia termínov dokončenia úloh (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Aktualizujte odkazy na ostatné presmerovania, aby ste sa vyhli tomuto reťazcu. (Automatic Translation)
