--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Prepiši obstoječe vnose (Automatic Translation)
 overwrite-existing-page-templates=Prepiši obstoječe predloge strani (Automatic Translation)
 overwrite-existing-style-books=Prepiši obstoječe slogovne knjige (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Obstoječo prilogo prepišite z odstranjenim. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Obstoječi vnos prepiši s tem iz koša. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Posodobi rezervirano količino (Automatic Translation)
 update-cart=Obnovi voziček.
 update-categories=Obnovi kategorije.
 update-category=Obnovi kategorijo.
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Posodobi velikost stolpca (Automatic Translation)
 update-comments=Obnovi komentarje.
 update-consumer=Posodobi potrošnika (Automatic Translation)
@@ -18125,6 +18127,7 @@ update-references=Posodabljanje sklicev (Automatic Translation)
 update-search-index=Posodobi indeks iskanja
 update-service-description=Obnovi opis storitve.
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Datum zapadlosti opravila posodobi (Automatic Translation)
 update-tasks-due-dates=Posodobi datume zapadlosti opravil (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Posodobite sklice drugih preusmeritev, da se izognete tej verigi. (Automatic Translation)
