--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Ersätt befintliga inlägg
 overwrite-existing-page-templates=Skriv över befintliga sidmallar
 overwrite-existing-style-books=Ersätt befintliga stilböcker
 overwrite-existing-utility-pages=Ersätt befintliga verktygssidor
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Ersätt befintlig bilaga med den borttagna bilagan.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Ersätt befintlig post med en post från papperskorgen.
 owned=Ägs
@@ -18084,6 +18085,7 @@ update-booked-quantity=Uppdatera bokad kvantitet
 update-cart=Uppdatera kundvagn
 update-categories=Uppdatera kategorier
 update-category=Uppdatera kategori
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Uppdatera kolumnstorlek
 update-comments=Uppdatera kommentarer
 update-consumer=Uppdatera konsument
@@ -18125,6 +18127,7 @@ update-references=Uppdatera referenser
 update-search-index=Uppdatera sökindex
 update-service-description=Uppdatera servicebeskrivning
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Uppdatera förfallodatum för uppgift
 update-tasks-due-dates=Uppdatera förfallodatum för uppgifter
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Uppdatera referenserna för de andra omdirigeringarna för att undvika den här kedjan.
