--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Overwrite Existing Entries (Automatic Copy)
 overwrite-existing-page-templates=Overwrite Existing Page Templates (Automatic Copy)
 overwrite-existing-style-books=Overwrite Existing Style Books (Automatic Copy)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=நீக்கப்பட்ட ஒன்றை ஏற்கனவே உள்ள இணைப்பில் மேலெழுதவும்.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Overwrite the existing entry with the one from the Recycle Bin. (Automatic Copy)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Update Booked Quantity (Automatic Copy)
 update-cart=Update Cart (Automatic Copy)
 update-categories=வகைகளை புதுப்பி
 update-category=வகையை புதுப்பி
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Update Column Size (Automatic Copy)
 update-comments=கருத்துகளை புதுப்பி
 update-consumer=நுகர்வோர் புதுப்பிக்கவும்
@@ -18125,6 +18127,7 @@ update-references=Update References (Automatic Copy)
 update-search-index=தேடல் குறியீட்டை புதுப்பிக்கவும்
 update-service-description=சேவை விவரம் புதுப்பிக்கவும்
 update-site-pages-variation=Site Pages Variation-ஐ புதுப்பி
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Update Task Due Date (Automatic Copy)
 update-tasks-due-dates=Update Tasks Due Dates (Automatic Copy)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain. (Automatic Copy)
