--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Varolan Girişlerin Üzerine Yaz (Automatic Translati
 overwrite-existing-page-templates=Varolan Sayfa Şablonlarının Üzerine Yaz (Automatic Translation)
 overwrite-existing-style-books=Varolan Stil Kitaplarının Üzerine Yazıl (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Kaldırılan ekle varolan ekin üzerine yaz. (Automatic Translation)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Varolan girdinin üzerine Geri Dönüşüm Kutusu'ndaki girdiyi yaz. (Automatic Translation)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Rezerve Edilen Miktarı Güncelleştir (Automatic Transla
 update-cart=Kart Güncelle
 update-categories=Kategorileri Güncelle
 update-category=Kategoriyi Güncelle
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Sütun Boyutunu Güncelleştir (Automatic Translation)
 update-comments=Yorumları Güncelle
 update-consumer=Tüketiciyi Güncelleştir (Automatic Translation)
@@ -18125,6 +18127,7 @@ update-references=Başvuruları Güncelleştir (Automatic Translation)
 update-search-index=Arama İndeksini Güncelle
 update-service-description=Hizmet Tanımını Güncelle
 update-site-pages-variation=Site Pages Variation
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Görev Son Tarihini Güncelleştir (Automatic Translation)
 update-tasks-due-dates=Görevlerin Son Tarihlerini Güncelleştir (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Bu zinciri önlemek için diğer yeniden yönlendirmelerin başvurularını güncelleştirin. (Automatic Translation)
