--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Ghi đè các mục hiện có (Automatic Translation
 overwrite-existing-page-templates=Ghi đè lên mẫu trang hiện có (Automatic Translation)
 overwrite-existing-style-books=Ghi đè sách kiểu hiện có (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Ghi đè tập tin đính kèm đã có với nội dung đã gỡ bỏ.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Ghi đè nội dung đã có với nội dung từ Thùng rác.
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Cập nhật Số lượng đã đặt (Automatic Transla
 update-cart=Cập nhật giỏ hàng
 update-categories=Cập nhật danh mục
 update-category=Cập nhật danh mục
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Cập nhật Kích cỡ Cột (Automatic Translation)
 update-comments=Cập nhật bình luận
 update-consumer=Cập nhật khách hàng
@@ -18125,6 +18127,7 @@ update-references=Cập nhật Tham chiếu (Automatic Translation)
 update-search-index=Cập nhật chỉ mục tìm kiếm
 update-service-description=Cập nhật mô tả dịch vụ
 update-site-pages-variation=Cập nhật trang thông tin biến thể
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Cập nhật Ngày Đến hạn Nhiệm vụ (Automatic Translation)
 update-tasks-due-dates=Cập nhật Ngày Đến hạn Nhiệm vụ (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Cập Nhật tham chiếu của các chuyển hướng khác để tránh chuỗi này. (Automatic Translation)
