--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=覆盖现有条目
 overwrite-existing-page-templates=覆盖现有页面模板
 overwrite-existing-style-books=覆盖现有样式簿
 overwrite-existing-utility-pages=覆盖现有实用工具页面
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=用已删除的附件替换现有附件。
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=用来自回收站中的条目覆盖现有条目。
 owned=拥有
@@ -18086,6 +18087,7 @@ update-booked-quantity=更新预订数量
 update-cart=更新购物车
 update-categories=更新类别
 update-category=更新类别
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=更新列大小
 update-comments=更新评论
 update-consumer=更新Consumer
@@ -18127,6 +18129,7 @@ update-references=更新引用
 update-search-index=更新搜索索引
 update-service-description=更新服务描述
 update-site-pages-variation=更新站点页面变体
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=更新任务截止日期
 update-tasks-due-dates=更新任务截止日期
 update-the-references-of-the-other-redirects-to-avoid-this-chain=更新其他重定向的引用以避免此重定向链。
