--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -11550,6 +11550,7 @@ overwrite-existing-entries=覆蓋現有條目
 overwrite-existing-page-templates=覆蓋現有的頁面範本
 overwrite-existing-style-books=覆蓋現有的風格樣式
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=以一個被移除的附件覆寫已存在的。
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=從垃圾桶的覆寫一個已存在的條目。
 owned=擁有
@@ -18085,6 +18086,7 @@ update-booked-quantity=更新預定數量
 update-cart=更新推車
 update-categories=更新類別
 update-category=更新類別
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=更新欄位大小
 update-comments=更新評論
 update-consumer=更新消費者
@@ -18126,6 +18128,7 @@ update-references=更新引用
 update-search-index=更新搜尋索引
 update-service-description=更新服務描述
 update-site-pages-variation=更新站台頁面變更
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=更新任務到期日
 update-tasks-due-dates=更新任務到期日
 update-the-references-of-the-other-redirects-to-avoid-this-chain=更新其他重導向的引用以避免此連鎖鏈。
