--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -11549,6 +11549,7 @@ overwrite-existing-entries=Overwrite Existing Entries (Automatic Copy)
 overwrite-existing-page-templates=Overwrite Existing Page Templates (Automatic Copy)
 overwrite-existing-style-books=Overwrite Existing Style Books (Automatic Copy)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Overwrite the existing attachment with the removed one. (Automatic Copy)
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Overwrite the existing entry with the one from the Recycle Bin. (Automatic Copy)
 owned=Owned (Automatic Copy)
@@ -18084,6 +18085,7 @@ update-booked-quantity=Update Booked Quantity (Automatic Copy)
 update-cart=Update Cart (Automatic Copy)
 update-categories=Update Categories (Automatic Copy)
 update-category=Update Category (Automatic Copy)
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Update Column Size
 update-comments=Update Comments (Automatic Copy)
 update-consumer=Update Consumer (Automatic Copy)
@@ -18125,6 +18127,7 @@ update-references=Update References (Automatic Copy)
 update-search-index=Update Search Index (Automatic Copy)
 update-service-description=Update Service Description (Automatic Copy)
 update-site-pages-variation=Update Site Pages Variation (Automatic Copy)
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Update Task Due Date (Automatic Copy)
 update-tasks-due-dates=Update Tasks Due Dates (Automatic Copy)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain. (Automatic Copy)
