--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -11551,6 +11551,7 @@ overwrite-existing-entries=Sobrescribir entradas existentes
 overwrite-existing-page-templates=Sobrescribir plantillas de página existentes
 overwrite-existing-style-books=Sobrescribir libros de estilo existentes
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Sobreescribir el adjunto existente con el borrado.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Sobreescribir la entrada existente con la de la papelera.
 owned=Propiedad de
@@ -18086,6 +18087,7 @@ update-booked-quantity=Actualizar cantidad reservada
 update-cart=Modificar carrito
 update-categories=Modificar categorías
 update-category=Modificar categoría
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Actualizar tamaño de columna
 update-comments=Modificar comentarios
 update-consumer=Modificar consumidor
@@ -18127,6 +18129,7 @@ update-references=Actualizar referencias
 update-search-index=Modificar indice de búsqueda
 update-service-description=Modificar la descripción del servicio
 update-site-pages-variation=Modificar la variante de páginas del sitio
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Actualizar fecha de vencimiento de la tarea
 update-tasks-due-dates=Actualizar fechas de vencimiento de tareas
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Esta opción actualiza las referencias del resto de los redireccionamientos para evitar esta cadena.
