--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11550,6 +11550,7 @@ overwrite-existing-entries=Sovrascrivere le voci esistenti (Automatic Translatio
 overwrite-existing-page-templates=Sovrascrivi template di pagina esistenti
 overwrite-existing-style-books=Sovrascrivi i libri di stile esistenti (Automatic Translation)
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages (Automatic Copy)
+overwrite-records=Overwrite Records (Automatic Copy)
 overwrite-the-existing-attachment-with-the-removed-one=Sovrascrivi l'allegato esistente con quello rimosso.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Sovrascrivi l'elemento esistente con quello nel cestino.
 owned=Owned (Automatic Copy)
@@ -18085,6 +18086,7 @@ update-booked-quantity=Aggiorna quantità prenotata
 update-cart=Aggiorna Carrello
 update-categories=Aggiorna Categorie
 update-category=Aggiorna Categoria
+update-changed-record-fields=Update Changed Record Fields (Automatic Copy)
 update-column-size=Aggiorna dimensione colonna (Automatic Translation)
 update-comments=Aggiorna Commenti
 update-consumer=Aggiorna Consumer
@@ -18126,6 +18128,7 @@ update-references=Aggiorna riferimenti (Automatic Translation)
 update-search-index=Aggiorna Indice di Ricerca
 update-service-description=Aggiorna la descrizione del Service
 update-site-pages-variation=Aggiorna le Variazioni di Pagine Sito
+update-strategy=Update Strategy (Automatic Copy)
 update-task-due-date=Aggiorna data scadenza attività (Automatic Translation)
 update-tasks-due-dates=Aggiorna date di scadenza attività (Automatic Translation)
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Aggiornare i riferimenti degli altri reindirizzamenti per evitare questa catena. (Automatic Translation)
